# lore-agents

./: .gitignore  BLUEPRINT.md  README.md  SHOW_HN.md  pyproject.toml
benchmark/: darwin_benchmark.py  false_positive_benchmark.py
examples/vigil_integration/: README.md  VIGIL_INTEGRATION_PARKED.md  compile_and_report.sh  demo_agent.py  morning_briefing.py
phalanx/: __init__.py  audit.py  compile.py  compliance.py  finops.py  injection.py  otel.py  pr.py  rego.py  store.py  vigil_integration.py  watch.py
phalanx/evolution/: __init__.py  darwin.py  propagator.py
phalanx/governance/: __init__.py  hypervisor.py  intent.py  kernel.py  policy.py  sre.py  trust.py  types.py
phalanx/integrations/: __init__.py  decorator.py  langchain.py
tests/: test_audit.py  test_compliance.py  test_darwin.py  test_finops.py  test_hypervisor.py  test_integrations.py  test_intent.py  test_kernel.py  test_otel.py  test_policy.py  test_pr.py  test_propagator.py  test_rego.py  test_sre.py  test_trust.py  test_types.py  test_watch.py  test_watch_async.py  test_watch_injection.py
