[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phalanx-agents"
version = "0.1.0"
description = "The agent hypervisor: learned policy enforcement, zero-trust identity, execution sandboxing, and fleet intelligence for autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Miles" }]
keywords = [
    "agents", "governance", "policy-engine", "hypervisor",
    "trust", "security", "owasp", "ai", "llm", "darwin",
    "fleet-intelligence", "learned-policies",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio", "mypy", "ruff"]
lore = ["lore-agents>=0.2.0"]
darwin = ["scikit-learn>=1.3"]
guardrails = ["guardrails-ai>=0.5"]
otel = ["opentelemetry-api>=1.20"]
all = ["lore-agents>=0.2.0", "scikit-learn>=1.3"]

[project.urls]
Homepage = "https://github.com/Miles0sage/phalanx"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
